integration page catalogue

--- a/src/app/produit/components/card/card.component.html
+++ b/src/app/produit/components/card/card.component.html
@@ -1,1 +1,25 @@
-<p>card works!</p>
+<div class="card m-3 shadow-sm">
+    <div class="card-img">
+        <span class="prix">2700 Fcfa</span>
+    </div>
+    <div class="card-info">
+        <div class="card-title">
+            <span>Burger Simple Viande</span>
+            <div>
+                <span>Categorie</span>
+                <span>Burger</span>
+            </div>
+        </div>
+        <div class="card-btns">
+            <div>
+                <span>-</span>
+                <input type="text" name="" id="">
+                <span>+</span>
+            </div>
+            <div>
+                <a class="shadow-ms">Ajouter</a>
+                <a class="shadow-ms">Details</a>
+            </div>
+        </div>
+    </div>
+</div>
