--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<div class="header d-flex flex-row justify-content-between align-items-center p-3 bg-dark ">
+    <div class="left fs-3 text-light">Brasil Burger</div>
+    <div class="text-center d-flex justify-content-center align-items-center">
+        <div class="icon text-center d-flex justify-content-center align-items-center" placement="bottom" ngbTooltip="Profil">
+            <img src="https://fakeimg.pl/60x60/?retina=1&text=LANG&font=noto" alt="">
+        </div>
+    </div>
+    <div class="f-right d-flex flex-row align-items-center justify-content-end ps-5">
+        <a class="btn-commandes text-light fs-6 text-center" >Mes Commandes</a>
+        <!-- <a class="btn-connexion text-light fs-6 text-center" >Se Connecter</a>
+        <a class="btn-inscription text-light fs-6" >S'inscrire</a> -->
+        <div class="right d-flex justify-content-center align-items-center" placement="left" ngbTooltip="Panier de commande">
+            <span class="d-flex justify-content-center align-items-center"><i class="bi bi-cart-fill"></i></span>
+            <span class="nbr-produits d-flex justify-content-center align-items-center">1</span>
+        </div>
+    </div>
+</div>
