--- a/src/app/produit/components/card/card.component.html
+++ b/src/app/produit/components/card/card.component.html
@@ -18,7 +18,7 @@
             </div>
             <div>
                 <a class="shadow-ms">Ajouter</a>
-                <a class="shadow-ms">Details</a>
+                <a class="shadow-ms"  [routerLink]='[{ outlets: { sidebar: ["details","1"] } }]'>Details</a>
             </div>
         </div>
     </div>
