--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header d-flex flex-row justify-content-between align-items-center p-3 bg-dark ">
+<div class="header {{showNav}} d-flex flex-row justify-content-between align-items-center p-3 bg-dark ">
     <div class="left fs-3 text-light">Brasil Burger</div>
     <div class="text-center d-flex justify-content-center align-items-center">
         <div class="icon text-center d-flex justify-content-center align-items-center" placement="bottom" ngbTooltip="Profil">
