--- a/src/app/client/panier/panier.component.html
+++ b/src/app/client/panier/panier.component.html
@@ -1,1 +1,278 @@
-<p>panier works!</p>
+<div class="header">
+    <ild-header></ild-header>
+</div>
+<div class="ligne-produit first">
+    <div class="img">
+        
+    </div>
+    <div class="nom fs-5">Nom</div>
+    <div class="quantite fs-5">Quantite</div>
+    <div class="prix-unit fs-5">Prix Unitaire</div>
+    <div class="prix-total fs-5">Prix Total</div>
+    <div class="actions fs-5">Actions</div>
+</div>
+<div class="panier">
+    <div class="recap">
+        <div class="ligne-produit shadow-sm">
+            <div class="img">
+                <img src="https://images.pexels.com/photos/3738730/pexels-photo-3738730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+            </div>
+            <div class="nom fs-5">Menu Simple</div>
+            <div class="quantite fs-5">2x</div>
+            <div class="prix-unit fs-5">2700</div>
+            <div class="prix-total fs-5">5400</div>
+            <div class="actions">
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABmJLR0QA/wD/AP+gvaeTAAAAd0lEQVRIie3P0QmAIBSF4Z/em6l2aIJokHxsBmerGRrBHuKCiBbktad74IAgfgfBcmcBDuAEPNBr4g4ISb1cdppLUSYNZIjO6S/2WlxAVxiZNXBpOuJyj77i0q0GfcOlY0t8Ndzwf3Ba408DKnhpQA3PDajilmwu1Ot0Hy1/FRoAAAAASUVORK5CYII=">
+                    </span>
+                    <span>modifier</span>
+                </button>
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABmJLR0QA/wD/AP+gvaeTAAAAf0lEQVRIie2VWwqAIBBFj9JqWkA/0Y5aVHuxttB27McvcXyEQeAcGJA7wtXBi6CMyAX4qFxvE5PQfMPe19hMbwW2hO7IT6TULxpb6m8pTUns/2rUZ0Lr/rgUGDnHR6iYLjmeBNMb2MN6AebMAUFzrFQybo6NYPb5f9yC5lhReAAeWkWhCem/HQAAAABJRU5ErkJggg==">
+                    </span>
+                    <span>
+                        details
+                    </span>
+                </button>
+            </div>
+        </div>
+        <div class="ligne-produit shadow-sm">
+            <div class="img">
+                <img src="https://images.pexels.com/photos/3738730/pexels-photo-3738730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+            </div>
+            <div class="nom fs-5">Menu Simple</div>
+            <div class="quantite fs-5">2x</div>
+            <div class="prix-unit fs-5">2700</div>
+            <div class="prix-total fs-5">5400</div>
+            <div class="actions">
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABmJLR0QA/wD/AP+gvaeTAAAAd0lEQVRIie3P0QmAIBSF4Z/em6l2aIJokHxsBmerGRrBHuKCiBbktad74IAgfgfBcmcBDuAEPNBr4g4ISb1cdppLUSYNZIjO6S/2WlxAVxiZNXBpOuJyj77i0q0GfcOlY0t8Ndzwf3Ba408DKnhpQA3PDajilmwu1Ot0Hy1/FRoAAAAASUVORK5CYII=">
+                    </span>
+                    <span>modifier</span>
+                </button>
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABmJLR0QA/wD/AP+gvaeTAAAAf0lEQVRIie2VWwqAIBBFj9JqWkA/0Y5aVHuxttB27McvcXyEQeAcGJA7wtXBi6CMyAX4qFxvE5PQfMPe19hMbwW2hO7IT6TULxpb6m8pTUns/2rUZ0Lr/rgUGDnHR6iYLjmeBNMb2MN6AebMAUFzrFQybo6NYPb5f9yC5lhReAAeWkWhCem/HQAAAABJRU5ErkJggg==">
+                    </span>
+                    <span>
+                        details
+                    </span>
+                </button>
+            </div>
+        </div>
+        <div class="ligne-produit shadow-sm">
+            <div class="img">
+                <img src="https://images.pexels.com/photos/3738730/pexels-photo-3738730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+            </div>
+            <div class="nom fs-5">Menu Simple</div>
+            <div class="quantite fs-5">2x</div>
+            <div class="prix-unit fs-5">2700</div>
+            <div class="prix-total fs-5">5400</div>
+            <div class="actions">
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABmJLR0QA/wD/AP+gvaeTAAAAd0lEQVRIie3P0QmAIBSF4Z/em6l2aIJokHxsBmerGRrBHuKCiBbktad74IAgfgfBcmcBDuAEPNBr4g4ISb1cdppLUSYNZIjO6S/2WlxAVxiZNXBpOuJyj77i0q0GfcOlY0t8Ndzwf3Ba408DKnhpQA3PDajilmwu1Ot0Hy1/FRoAAAAASUVORK5CYII=">
+                    </span>
+                    <span>modifier</span>
+                </button>
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABmJLR0QA/wD/AP+gvaeTAAAAf0lEQVRIie2VWwqAIBBFj9JqWkA/0Y5aVHuxttB27McvcXyEQeAcGJA7wtXBi6CMyAX4qFxvE5PQfMPe19hMbwW2hO7IT6TULxpb6m8pTUns/2rUZ0Lr/rgUGDnHR6iYLjmeBNMb2MN6AebMAUFzrFQybo6NYPb5f9yC5lhReAAeWkWhCem/HQAAAABJRU5ErkJggg==">
+                    </span>
+                    <span>
+                        details
+                    </span>
+                </button>
+            </div>
+        </div>
+        <div class="ligne-produit shadow-sm">
+            <div class="img">
+                <img src="https://images.pexels.com/photos/3738730/pexels-photo-3738730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+            </div>
+            <div class="nom fs-5">Menu Simple</div>
+            <div class="quantite fs-5">2x</div>
+            <div class="prix-unit fs-5">2700</div>
+            <div class="prix-total fs-5">5400</div>
+            <div class="actions">
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABmJLR0QA/wD/AP+gvaeTAAAAd0lEQVRIie3P0QmAIBSF4Z/em6l2aIJokHxsBmerGRrBHuKCiBbktad74IAgfgfBcmcBDuAEPNBr4g4ISb1cdppLUSYNZIjO6S/2WlxAVxiZNXBpOuJyj77i0q0GfcOlY0t8Ndzwf3Ba408DKnhpQA3PDajilmwu1Ot0Hy1/FRoAAAAASUVORK5CYII=">
+                    </span>
+                    <span>modifier</span>
+                </button>
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABmJLR0QA/wD/AP+gvaeTAAAAf0lEQVRIie2VWwqAIBBFj9JqWkA/0Y5aVHuxttB27McvcXyEQeAcGJA7wtXBi6CMyAX4qFxvE5PQfMPe19hMbwW2hO7IT6TULxpb6m8pTUns/2rUZ0Lr/rgUGDnHR6iYLjmeBNMb2MN6AebMAUFzrFQybo6NYPb5f9yC5lhReAAeWkWhCem/HQAAAABJRU5ErkJggg==">
+                    </span>
+                    <span>
+                        details
+                    </span>
+                </button>
+            </div>
+        </div>
+        <div class="ligne-produit shadow-sm">
+            <div class="img">
+                <img src="https://images.pexels.com/photos/3738730/pexels-photo-3738730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+            </div>
+            <div class="nom fs-5">Menu Simple</div>
+            <div class="quantite fs-5">2x</div>
+            <div class="prix-unit fs-5">2700</div>
+            <div class="prix-total fs-5">5400</div>
+            <div class="actions">
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABmJLR0QA/wD/AP+gvaeTAAAAd0lEQVRIie3P0QmAIBSF4Z/em6l2aIJokHxsBmerGRrBHuKCiBbktad74IAgfgfBcmcBDuAEPNBr4g4ISb1cdppLUSYNZIjO6S/2WlxAVxiZNXBpOuJyj77i0q0GfcOlY0t8Ndzwf3Ba408DKnhpQA3PDajilmwu1Ot0Hy1/FRoAAAAASUVORK5CYII=">
+                    </span>
+                    <span>modifier</span>
+                </button>
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABmJLR0QA/wD/AP+gvaeTAAAAf0lEQVRIie2VWwqAIBBFj9JqWkA/0Y5aVHuxttB27McvcXyEQeAcGJA7wtXBi6CMyAX4qFxvE5PQfMPe19hMbwW2hO7IT6TULxpb6m8pTUns/2rUZ0Lr/rgUGDnHR6iYLjmeBNMb2MN6AebMAUFzrFQybo6NYPb5f9yC5lhReAAeWkWhCem/HQAAAABJRU5ErkJggg==">
+                    </span>
+                    <span>
+                        details
+                    </span>
+                </button>
+            </div>
+        </div>
+        <div class="ligne-produit shadow-sm">
+            <div class="img">
+                <img src="https://images.pexels.com/photos/3738730/pexels-photo-3738730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+            </div>
+            <div class="nom fs-5">Menu Simple</div>
+            <div class="quantite fs-5">2x</div>
+            <div class="prix-unit fs-5">2700</div>
+            <div class="prix-total fs-5">5400</div>
+            <div class="actions">
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABmJLR0QA/wD/AP+gvaeTAAAAd0lEQVRIie3P0QmAIBSF4Z/em6l2aIJokHxsBmerGRrBHuKCiBbktad74IAgfgfBcmcBDuAEPNBr4g4ISb1cdppLUSYNZIjO6S/2WlxAVxiZNXBpOuJyj77i0q0GfcOlY0t8Ndzwf3Ba408DKnhpQA3PDajilmwu1Ot0Hy1/FRoAAAAASUVORK5CYII=">
+                    </span>
+                    <span>modifier</span>
+                </button>
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABmJLR0QA/wD/AP+gvaeTAAAAf0lEQVRIie2VWwqAIBBFj9JqWkA/0Y5aVHuxttB27McvcXyEQeAcGJA7wtXBi6CMyAX4qFxvE5PQfMPe19hMbwW2hO7IT6TULxpb6m8pTUns/2rUZ0Lr/rgUGDnHR6iYLjmeBNMb2MN6AebMAUFzrFQybo6NYPb5f9yC5lhReAAeWkWhCem/HQAAAABJRU5ErkJggg==">
+                    </span>
+                    <span>
+                        details
+                    </span>
+                </button>
+            </div>
+        </div>
+        <div class="ligne-produit shadow-sm">
+            <div class="img">
+                <img src="https://images.pexels.com/photos/3738730/pexels-photo-3738730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+            </div>
+            <div class="nom fs-5">Menu Simple</div>
+            <div class="quantite fs-5">2x</div>
+            <div class="prix-unit fs-5">2700</div>
+            <div class="prix-total fs-5">5400</div>
+            <div class="actions">
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABmJLR0QA/wD/AP+gvaeTAAAAd0lEQVRIie3P0QmAIBSF4Z/em6l2aIJokHxsBmerGRrBHuKCiBbktad74IAgfgfBcmcBDuAEPNBr4g4ISb1cdppLUSYNZIjO6S/2WlxAVxiZNXBpOuJyj77i0q0GfcOlY0t8Ndzwf3Ba408DKnhpQA3PDajilmwu1Ot0Hy1/FRoAAAAASUVORK5CYII=">
+                    </span>
+                    <span>modifier</span>
+                </button>
+                <button [routerLink]='[{ outlets: { sidebar: ["produit","details","1"] } }]' class="btn border">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABmJLR0QA/wD/AP+gvaeTAAAAf0lEQVRIie2VWwqAIBBFj9JqWkA/0Y5aVHuxttB27McvcXyEQeAcGJA7wtXBi6CMyAX4qFxvE5PQfMPe19hMbwW2hO7IT6TULxpb6m8pTUns/2rUZ0Lr/rgUGDnHR6iYLjmeBNMb2MN6AebMAUFzrFQybo6NYPb5f9yC5lhReAAeWkWhCem/HQAAAABJRU5ErkJggg==">
+                    </span>
+                    <span>
+                        details
+                    </span>
+                </button>
+            </div>
+        </div>
+        <div class="ligne-produit shadow-sm">
+            <div class="img">
+                <img src="https://images.pexels.com/photos/3738730/pexels-photo-3738730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+            </div>
+            <div class="nom fs-5">Menu Simple</div>
+            <div class="quantite fs-5">2x</div>
+            <div class="prix-unit fs-5">2700</div>
+            <div class="prix-total fs-5">5400</div>
+            <div class="actions">
+                <button class="btn border shadow-sm">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABmJLR0QA/wD/AP+gvaeTAAAAd0lEQVRIie3P0QmAIBSF4Z/em6l2aIJokHxsBmerGRrBHuKCiBbktad74IAgfgfBcmcBDuAEPNBr4g4ISb1cdppLUSYNZIjO6S/2WlxAVxiZNXBpOuJyj77i0q0GfcOlY0t8Ndzwf3Ba408DKnhpQA3PDajilmwu1Ot0Hy1/FRoAAAAASUVORK5CYII=">
+                    </span>
+                    <span>modifier</span>
+                </button>
+                <button class="btn border shadow-sm">
+                    <span>
+                        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABmJLR0QA/wD/AP+gvaeTAAAAf0lEQVRIie2VWwqAIBBFj9JqWkA/0Y5aVHuxttB27McvcXyEQeAcGJA7wtXBi6CMyAX4qFxvE5PQfMPe19hMbwW2hO7IT6TULxpb6m8pTUns/2rUZ0Lr/rgUGDnHR6iYLjmeBNMb2MN6AebMAUFzrFQybo6NYPb5f9yC5lhReAAeWkWhCem/HQAAAABJRU5ErkJggg==">
+                    </span>
+                    <span>
+                        details
+                    </span>
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="infos shadow-sm">
+        <div class="montant bg-dark">
+            <span class="text-2xl text-light">Total</span>
+            <span class="fs-5 border-2 bg-light text-dark rounded">24000 FCFA</span>
+        </div>
+        <div class="livraison">
+            <p>
+                <button type="button" class="btn border bg-warning text-white" (click)="collapse.toggle()" [attr.aria-expanded]="!isCollapsed"
+                  aria-controls="collapseExample">
+                  Livraison a Domicile
+                </button>
+              </p>
+              <div #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
+                <div class="card">
+                  <div class="card-body">
+                    <div>
+                        <label for="">Zone</label>
+                        <select name="" id="" class="form-control">
+                            <option value="" checked>Choisir la zone</option>
+                            <ng-container *ngFor="let zone of [1,2,3,4,5,6,7,8,9,10,11,12]">
+                                <option value="zone">Zone {{zone}}</option>
+                            </ng-container>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="">Adresse</label>
+                        <input type="text" class="form-control rounded">
+                    </div>
+                    <div>
+                        <label for="">Telephone</label>
+                        <div class="flex">
+                            <input type="text" value="+ 221" class=" p-2 bg-dark text-light w-12 rounded-sm">
+                            <input type="text" class="form-control tel">
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        <div class="infos-footer">
+            <span class="">Type de livraison</span>
+            <span class="typeLivraison">
+                <ng-container *ngIf="isCollapsed, then content else other_content"></ng-container>
+                <ng-template #content>
+                    Sur Place
+                </ng-template>
+                <ng-template #other_content>
+                    A Domicile
+                </ng-template>
+            </span>
+        </div>
+        <div class="valider">
+            <button class="btn btn-success px-5">Valider</button>
+        </div>
+    </div>
+</div>
+<!-- <div class="paginate">
+    <ngb-pagination [collectionSize]="70" [(page)]="page" [boundaryLinks]="true"></ngb-pagination>
+</div> -->
+<div class="footer">
+    <ild-footer></ild-footer>
+</div>
