--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 
+
 html, body { height: 100%; }
 *{
     box-sizing: border-box;
@@ -13,3 +14,7 @@ body { margin: 0; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Se
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
