--- a/src/app/produit/components/plus-moins/plus-moins.component.html
+++ b/src/app/produit/components/plus-moins/plus-moins.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-row justify-content-between align-items-center">
-    <span class="shadow-sm">-</span>
-    <input class="shadow" type="text" name="" id="">
-    <span class="shadow-sm">+</span>
+    <span class="shadow-sm" (click)="moins()">-</span>
+        <input class="shadow" #inputQuantite (change)="sendToGrandParent" type="text" name="" id="" value="{{quantiteVal}}">
+    <span class="shadow-sm" (click)="plus()">+</span>
 </div>
